[package]
name = "float-tests"
version = "0.1.0"
authors = ["Federico Mena Quintero <federico@gnome.org>"]

[dependencies.cssparser]
#git = "file:///home/federico/src/rust-cssparser"
#git = "https://github.com/federicomenaquintero/rust-cssparser"
git = "https://github.com/servo/rust-cssparser"
branch = "master"
